--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-hook-form": "^3.28.2",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
     "typeface-roboto": "0.0.75",
     "yup": "^0.27.0"
   },
